# whistle

./: .clang-format  .editorconfig  .gitignore  Cargo.toml  README.md  io.github.mpobaschnig.Whistle.json  meson.build
data/: io.github.mpobaschnig.Whistle.appdata.xml.in  io.github.mpobaschnig.Whistle.desktop.in  io.github.mpobaschnig.Whistle.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.rs  config.rs  main.c  main.rs  meson.build  whistle-application.c  whistle-application.h  whistle-window.c  whistle-window.h  whistle-window.ui  whistle.gresource.xml  window.rs  window.ui
src/gtk/: style.css
